Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -216,7 +216,38 @@
     
     document.getElementById(tabName).classList.add("active");
     event.currentTarget.classList.add("active");
-  }
+  }Inter de Verdun
+
+Fuerza y honor
+
+Convocatoria
+
+Cargando convocatoria...
+TITULARES
+
+99 MORDILLO (El Puma de Verdun)
+2 POMS (El rubio)
+25 RAÚL (american stanford)
+98 VILLA (Elrubiopatapalo)
+10 DANI (D10S)
+5 ARM (ODOVon)
+69 DELRIO JR
+SUPLENTES
+
+E77 PABS
+69 SALO
+14 ALAN
+DT: DLF
+
+PRESIDENTE: EL PORRAS DE VERDUN
+
+FUERZA Y HONOR
+Galería Multimedia
+
+Foto del equipo 1  Foto del equipo 2  Foto del equipo 3
+Vídeos destacados
+
+ 
 </script>
 
 </body>
