--- a/index.html
+++ b/index.html
@@ -1,64 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inter de Verdun</title>
-    <link rel="stylesheet" href="assets/styles.css">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-    <script src="app.js" defer></script>
-</head>
-<body>
-    <header>
-        <h1>Inter de Verdun</h1>
-        <p class="subtitulo">Fuerza y honor - Fútbol 7 Barcelona</p>
-    </header>
-
-    <main>
-        <section class="resumen">
-            <h2>Último Partido - Inter de Verdun B</h2>
-            <div class="resumen-card">
-                <h3>⚽ F.C. Rio Ebrio 0 - 5 Inter de Verdun B</h3>
-                <ul>
-                    <li>🔥 14’ Sopas D.</li>
-                    <li>💥 16’ El Porras D.</li>
-                    <li>⚡ 27’ Grizzi M.</li>
-                    <li>⚔️ 27’ Rony M.</li>
-                    <li>🎯 45’ Pablo P.</li>
-                </ul>
-                <p class="resumen-info">Portería a cero. Dominio total.</p>
-            </div>
-        </section>
-
-        <section class="liga">
-            <h2>Calendario y Clasificación</h2>
-            <p><a href="https://apuntamelo.com/grupo/2/504/2/1847/0" target="_blank">🅰️ Inter de Verdun A</a></p>
-            <p><a href="https://apuntamelo.com/grupo/2/588/2/2434/0" target="_blank">🅱️ Inter de Verdun B</a></p>
-        </section>
-
-        <section class="convocatoria">
-            <h2>Convocatoria</h2>
-            <textarea id="convocatoriaText" placeholder="Escribe la convocatoria aquí..."></textarea>
-            <button onclick="guardarConvocatoria()">Guardar</button>
-            <div id="convocatoriaPreview"></div>
-        </section>
-
-        <section class="app-movil">
-            <h2>📱 Instala la App</h2>
-            <p>Agrega esta web a tu pantalla de inicio desde el navegador para instalarla como app.</p>
-            <button onclick="promptInstalacion()">Instalar App</button>
-        </section>
-
-        <section class="instagram">
-            <h2>📸 Instagram</h2>
-            <p><a href="https://instagram.com/interdeverdunbcn" target="_blank">@interdeverdunbcn</a></p>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 Inter de Verdun | Fuerza y honor</p>
-    </footer>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Inter de Verdun</title></head><body><h1>Web en construcción con funciones completas en camino</h1></body></html>
