--- a/index.html
+++ b/index.html
@@ -6,65 +6,45 @@
   <title>Inter de Verdun B</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
-  <link rel="icon" href="assets/escudo.png" />
+  <link rel="icon" href="assets/escudo_192x192.png" />
   <meta name="theme-color" content="#0288d1" />
 </head>
+
 <body>
   <header>
     <h1>Inter de Verdun B</h1>
     <p class="subtitulo">¡Fuerza y honor!</p>
-    <script type="module" src="js/jugadores-data.js"></script>
-<script type="module" src="js/perfiles.js"></script>
-<script type="module" src="js/convocatorias.js"></script>
-<script>
-  if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("service-worker.js");
-  }
-</script>
   </header>
 
   <main>
-    <section id="login-section">
-      <h2>Acceso para entrenadores</h2>
-      <input type="password" id="pin" placeholder="Introduce el PIN" />
-      <button onclick="autenticar()">Entrar</button>
-    </section>
-  </main>
-<section id="convocatoria"></section>
-<section id="perfiles"></section>
+    <!-- Sección Convocatoria -->
+    <section id="convocatoria"></section>
 
-<footer>
-  <p>📸 Síguenos en <a href="https://instagram.com/interdeverdunbcn" target="_blank">@interdeverdunbcn</a></p>
-  <p>⚽ Powered by Inter de Verdun · Deploy via GitHub Pages</p>
-  
+    <!-- Sección MVP -->
+    <section id="mvp"></section>
+
+    <!-- Sección Perfiles -->
+    <section id="perfiles"></section>
+  </main>
+
   <footer>
     <p>📸 Síguenos en <a href="https://instagram.com/interdeverdunbcn" target="_blank">@interdeverdunbcn</a></p>
     <p>⚽ Powered by Inter de Verdun · Deploy via GitHub Pages</p>
   </footer>
 
   <!-- Scripts -->
-  <script type="module" src="js/perfiles.js"></script>
   <script>
-    function autenticar() {
-      const pin = document.getElementById('pin').value;
-      if (pin === "2000") {
-        localStorage.setItem("autorizado", "true");
-        location.reload();
-      } else {
-        alert("PIN incorrecto");
-      }
-    }
-
-    if (localStorage.getItem("autorizado") === "true") {
-      document.getElementById("login-section").style.display = "none";
-    }
+    // Acceso automático sin login
+    localStorage.setItem("autorizado", "true");
   </script>
 
+  <script type="module" src="js/jugadores-data.js"></script>
+  <script type="module" src="js/perfiles.js"></script>
+  <script type="module" src="js/convocatorias.js"></script>
+  <script type="module" src="js/mvp.js"></script>
   <script>
     if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js")
-        .then(() => console.log("✅ Service Worker registrado"))
-        .catch(err => console.error("Error en Service Worker:", err));
+      navigator.serviceWorker.register("service-worker.js");
     }
   </script>
 </body>
